Update page info for 2019
- Update google analytics tracking code
- Fix navbar responsiving sizing issue
- Update contact email
- Remove twitter button

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics [script added: 2018-10-25] -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88429785-4"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics [script added: 2019-01-05] -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131763038-1"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-88429785-4');
+    gtag('config', 'UA-131763038-1');
     </script>
     <meta charset="utf-8">
     <meta name="Description" content="The portfolio website of Sam Legros.">
@@ -38,20 +38,20 @@
                         <a data-scroll class="nav-link" href="#section-about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a data-scroll class="nav-link" href="#section-toolbox">Tech Toolbox</a>
+                        <a data-scroll class="nav-link" href="#section-toolbox"><span class="long-text">Tech Toolbox</span><span class="short-text">Toolbox</span></a>
                     </li>
                     <li class="nav-item">
                         <a data-scroll class="nav-link" href="#section-portfolio">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a data-scroll class="nav-link" href="#section-social">Social</a>
+                        <a data-scroll class="nav-link" href="#section-connect">Connect</a>
                     </li>
                     <li class="nav-item">
                         <a data-scroll class="nav-link" href="#section-settings">Settings</a>
                     </li>
                 </ul>
                 <span class="navbar-text">
-                    <a href="mailto:email@samlegros.com?subject=Awesome%20Website!" title="This link will open your email client to send an email to Sam Legros"><button tabindex="-1" class="btn"><span class="button-text">CONTACT</span></button></a>
+                    <a href="mailto:legros.sam@gmail.com?subject=Awesome%20Website!" title="This link will open your email client to send an email to Sam Legros"><button tabindex="-1" class="btn"><span class="button-text">CONTACT</span></button></a>
                 </span>
             </div>
         </nav>
@@ -83,7 +83,7 @@
             <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 color-text-grey text-left">
                 <p tabindex="0">I believe in working towards greater digital access for all, the passion and dedication of small teams, the unlimited potential of technology, and the power of a good night's&nbsp;sleep.</p>
                 <p tabindex="0">I'm a recent <a href="https://www.ryerson.ca/graduate/digitalmedia/" target="_blank" rel="noopener" class="site-link" title="Link to Ryerson University's Master of Digital Media website">Master of Digital Media <i class="fas fa-external-link-alt" title="external link icon"></i></a> grad, specializing in accessibility in web development and have a BFA in <a href="https://ryersonrta.ca/programs/bfa-new-media" target="_blank" rel="noopener" class="site-link"title="Link to Ryerson University's New Media website">New Media <i class="fas fa-external-link-alt" title="external link icon"></i></a> from Ryerson&nbsp;University.</p>
-                <p tabindex="0">When I'm not working, you can find me cooking, <a href="https://www.goodreads.com/user/show/46470866-sam-legros" target="_blank" rel="noopener" class="site-link" title="Link to Sam Legros' Goodreads page">reading <i class="fas fa-external-link-alt" title="external link icon"></i></a>, and playing games (HotS, RDR2, or Horizon: Zero Dawn ← definitely recommend), usually in that&nbsp;order.</p>
+                <p tabindex="0">When I'm not working, you can find me cooking, <a href="https://www.goodreads.com/user/show/46470866-sam-legros" target="_blank" rel="noopener" class="site-link" title="Link to Sam Legros' Goodreads page">reading <i class="fas fa-external-link-alt" title="external link icon"></i></a>, or <a href="https://www.igdb.com/users/samlegros/lists" target="_blank" rel="noopener" class="site-link" title="Link to Sam Legros' IGDb page">playing games <i class="fas fa-external-link-alt" title="external link icon"></i></a>, usually in that&nbsp;order.</p>
                 <div class="row">
                 </div>
             </div>
@@ -502,15 +502,14 @@
             </div>
         </div>
     </section>
-    <section id="section-social">
+    <section id="section-connect">
         <h2 tabindex="0">Let's stay connected</h2>
         <p tabindex="0" class="color-text-grey">There are many ways we can get in touch&nbsp;<span class="text-emoji align-middle">👋</span></p>
 
         <div id="contact-icons-container">
             <a tabindex="0" href="https://github.com/samlegros" target="_blank" rel="noopener" title="Link to Sam Legros' GitHub page"><i class="fab fa-github-square" title="github icon"></i></a>
             <a tabindex="0" href="https://www.linkedin.com/in/samlegros/" target="_blank" rel="noopener" title="Link to Sam Legros' LinkedIn page"><i class="fab fa-linkedin" title="linkedin icon"></i></a>
-            <a tabindex="0" href="https://twitter.com/SamLegros" target="_blank" rel="noopener" title="Link to Sam Legros' Twitter page"><i class="fab fa-twitter-square" title="twitter icon"></i></a>
-            <a tabindex="0" href="mailto:email@samlegros.com?subject=Awesome%20Website!" target="_blank" rel="noopener" title="This link will open your email client to send an email to Sam Legros"><i class="fas fa-envelope-square" title="email icon"></i></a>
+            <a tabindex="0" href="mailto:legros.sam@gmail.com?subject=Awesome%20Website!" target="_blank" rel="noopener" title="This link will open your email client to send an email to Sam Legros"><i class="fas fa-envelope-square" title="email icon"></i></a>
             <a tabindex="0" href="tel:+16472299122" target="_blank" rel="noopener" title="This link will open your phone client to call Sam Legros"><i class="fas fa-phone-square" title="phone icon"></i></a>
         </div>
     </section>
@@ -526,10 +525,10 @@
         </div>
     </section>
     <footer>
-        <p tabindex="0">Website made with <i class="fas fa-heart" title="love"></i> by Sam Legros in&nbsp;2018</p>
+        <p tabindex="0">Website made with <i class="fas fa-heart" title="love"></i> by Sam Legros in&nbsp;2019</p>
         <a href="https://www.w3.org/WAI/WCAG2AA-Conformance" target="_blank" rel="noopener" title="Explanation of WCAG 2.0 Level Double-A Conformance"><img height="32" width="88" src="https://www.w3.org/WAI/wcag2AA-blue" alt="Level Double-A conformance, W3C WAI Web Content Accessibility Guidelines 2.0"></a>
         <!-- WCAG 2.0 Conformance Claim
-        Date: 2018-10-30
+        Date: 2019-01-05
         Guidelines title, version and URI: "Web Content Accessibility Guidelines 2.0 at http://www.w3.org/TR/2008/REC-WCAG20-20081211/
         Conformance level: Level AA
         Description of web page: The single web page of Sam Legros's web development portfolio. The page include sections relating to Sam's short biography, technology skills, project examples, and online links.
