Remove email from website.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<!-- Website was last updated on: 2019-02-24 -->
+	<!-- Website was last updated on: 2019-03-08 -->
 	<!-- Global site tag (gtag.js) - Google Analytics [script added: 2019-01-05] -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131763038-1"></script>
 	<script>
@@ -52,7 +52,7 @@
 					</li>
 				</ul>
 				<span class="navbar-text">
-					<a href="mailto:legros.sam@gmail.com?subject=Awesome%20Website!" title="This link will open your email client to send an email to Sam Legros"><button tabindex="-1" class="btn"><span class="button-text">CONTACT</span></button></a>
+					<a href="https://github.com/SamLegros/ama/issues/new" target="_blank" title="Navigate to Sam Legros's GitHub ask-me-anything repository and open a new issue"><button tabindex="-1" class="btn"><span class="button-text">CONTACT</span></button></a>
 				</span>
 			</div>
 		</nav>
@@ -553,13 +553,11 @@
 	</section>
 	<section id="section-connect">
 		<h2 tabindex="0">Let's stay connected</h2>
-		<p tabindex="0" class="color-text-grey">There are many ways we can get in touch&nbsp;<span class="text-emoji align-middle">👋</span></p>
+		<p tabindex="0" class="color-text-grey">There are several ways we can get in touch&nbsp;<span class="text-emoji align-middle">👋</span></p>
 
 		<div id="contact-icons-container">
 			<a tabindex="0" href="https://github.com/samlegros" target="_blank" rel="noopener" title="Link to Sam Legros' GitHub page"><i class="fab fa-github-square" title="github icon"></i></a>
 			<a tabindex="0" href="https://www.linkedin.com/in/samlegros/" target="_blank" rel="noopener" title="Link to Sam Legros' LinkedIn page"><i class="fab fa-linkedin" title="linkedin icon"></i></a>
-			<a tabindex="0" href="mailto:legros.sam@gmail.com?subject=Awesome%20Website!" target="_blank" rel="noopener" title="This link will open your email client to send an email to Sam Legros"><i class="fas fa-envelope-square" title="email icon"></i></a>
-			<a tabindex="0" href="tel:+16472299122" target="_blank" rel="noopener" title="This link will open your phone client to call Sam Legros"><i class="fas fa-phone-square" title="phone icon"></i></a>
 		</div>
 	</section>
 	<section id="section-settings">
@@ -577,7 +575,7 @@
 		<p tabindex="0">Website made with <i class="fas fa-heart" title="love"></i> by Sam Legros in&nbsp;2019</p>
 		<a href="https://www.w3.org/WAI/WCAG2AA-Conformance" target="_blank" rel="noopener" title="Explanation of WCAG 2.0 Level Double-A Conformance"><img height="32" width="88" src="https://www.w3.org/WAI/wcag2AA-blue" alt="Level Double-A conformance, W3C WAI Web Content Accessibility Guidelines 2.0"></a>
 		<!-- WCAG 2.0 Conformance Claim
-		Date: 2019-02-24
+		Date: 2019-03-08
 		Guidelines title, version and URI: "Web Content Accessibility Guidelines 2.0 at http://www.w3.org/TR/2008/REC-WCAG20-20081211/
 		Conformance level: Level AA
 		Description of web page: The single web page of Sam Legros's web development portfolio. The page include sections relating to Sam's short biography, technology skills, project examples, and online links.
