Change name from Legros to Sverko
Add email back to website.
Refactor script.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<!-- Website was last updated on: 2019-03-08 -->
+	<!-- Website was last updated on: 2019-06-03 -->
 	<!-- Global site tag (gtag.js) - Google Analytics [script added: 2019-01-05] -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131763038-1"></script>
 	<script>
@@ -11,7 +11,7 @@
 	gtag('config', 'UA-131763038-1');
 	</script>
 	<meta charset="utf-8">
-	<meta name="Description" content="The portfolio website of Sam Legros.">
+	<meta name="Description" content="The portfolio website of Sam Sverko.">
 	<link rel="manifest" href="manifest.json">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- online Google Font: Montserrat -->
@@ -24,12 +24,12 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 	<!-- local CSS -->
 	<link rel="stylesheet" href="styles/style.css">
-	<title>Portfolio | Sam Legros</title>
+	<title>Portfolio | Sam Sverko</title>
 </head>
 <body>
 	<section id="section-home">
 		<nav class="navbar navbar-expand-md navbar-light">
-			<a class="navbar-brand font-weight-bold" href="https://www.samsverko.com">Sam Legros</a>
+			<a class="navbar-brand font-weight-bold" href="https://www.samsverko.com">Sam Sverko</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -52,7 +52,7 @@
 					</li>
 				</ul>
 				<span class="navbar-text">
-					<a href="https://github.com/SamLegros/ama/issues/new" target="_blank" title="Navigate to Sam Legros's GitHub ask-me-anything repository and open a new issue"><button tabindex="-1" class="btn"><span class="button-text">CONTACT</span></button></a>
+					<a href="https://github.com/SamSverko/ama/issues/new" target="_blank" title="Navigate to Sam Sverko's GitHub ask-me-anything repository and open a new issue"><button tabindex="-1" class="btn"><span class="button-text">CONTACT</span></button></a>
 				</span>
 			</div>
 		</nav>
@@ -71,20 +71,20 @@
 		<h2 tabindex="0">A little bit about&nbsp;me</h2>
 		<div class="row">
 			<div class="col-12">
-				<img tabindex="0" src="images/headshot_sam_legros_round.jpg" alt="headshot of Sam Legros" class="img-round rounded">
+				<img tabindex="0" src="images/headshot_sam_sverko_round.jpg" alt="headshot of Sam Sverko" class="img-round rounded">
 			</div>
 			<div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 color-text-grey text-left" style="padding-bottom: 25px;">
 				<p tabindex="0" class="font-weight-bold">Hi, I'm Sam and I'm a web developer <span class="text-emoji align-middle">👨🏻‍💻</span></p>
 				<p tabindex="0">I'm a natural problem solver who is not afraid of a challenge and believe that being able to have fun on the job makes any project&nbsp;possible.</p>
 				<p tabindex="0">I'm a "big picture"​ thinker who is able to visualize problems before they happen, leading to balanced, complete, and responsive projects in inclusive design and web development. Web development is my specialty, but working with people, for people is what I do&nbsp;best.</p>
 				<div class="p-0 pt-2 col-12 text-center text-md-left pl-md-0">
-					<a tabindex="0" href="https://www.linkedin.com/in/samlegros/" target="_blank" rel="noopener" title="Link to Sam Legros' LinkedIn page"><button tabindex="-1" type="button" value="Go to Sam Legros' LinkedIn page" class="btn"><span class="button-text">VIEW MY LINKEDIN</span></button></a>
+					<a tabindex="0" href="https://www.linkedin.com/in/samsverko/" target="_blank" rel="noopener" title="Link to Sam Sverko's LinkedIn page"><button tabindex="-1" type="button" value="Go to Sam Sverko's LinkedIn page" class="btn"><span class="button-text">VIEW MY LINKEDIN</span></button></a>
 				</div>
 			</div>
 			<div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 color-text-grey text-left">
 				<p tabindex="0">I believe in working towards greater digital access for all, the passion and dedication of small teams, the unlimited potential of technology, and the power of a good night's&nbsp;sleep.</p>
 				<p tabindex="0">I'm have a <a href="https://www.ryerson.ca/graduate/digitalmedia/" target="_blank" rel="noopener" class="site-link" title="Link to Ryerson University's Master of Digital Media website">Master of Digital Media <i class="fas fa-external-link-alt" title="external link icon"></i></a>, specializing in accessibility in web development and have a BFA in <a href="https://ryersonrta.ca/programs/bfa-new-media" target="_blank" rel="noopener" class="site-link"title="Link to Ryerson University's New Media website">New Media <i class="fas fa-external-link-alt" title="external link icon"></i></a> from Ryerson&nbsp;University.</p>
-				<p tabindex="0">When I'm not working, you can find me cooking, <a href="https://www.goodreads.com/user/show/46470866-sam-legros" target="_blank" rel="noopener" class="site-link" title="Link to Sam Legros' Goodreads page">reading <i class="fas fa-external-link-alt" title="external link icon"></i></a>, or <a href="https://www.igdb.com/users/samlegros/lists" target="_blank" rel="noopener" class="site-link" title="Link to Sam Legros' IGDb page">playing games <i class="fas fa-external-link-alt" title="external link icon"></i></a>, usually in that&nbsp;order.</p>
+				<p tabindex="0">When I'm not working, you can find me cooking, <a href="https://www.goodreads.com/user/show/46470866-sam-sverko" target="_blank" rel="noopener" class="site-link" title="Link to Sam Sverko's Goodreads page">reading <i class="fas fa-external-link-alt" title="external link icon"></i></a>, or playing games (Eurchre, anyone?), usually in that&nbsp;order.</p>
 				<div class="row">
 				</div>
 			</div>
@@ -307,10 +307,10 @@
 				<div class="card-footer">
 					<div class="row portfolio-dual-buttons">
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://codepen.io/SamLegros/full/mMbzLo" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
+							<a href="https://codepen.io/samsverko/full/mMbzLo" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
 						</div>
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://github.com/SamLegros/javascript-calculator" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+							<a href="https://github.com/samsverko/javascript-calculator" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
 						</div>
 					</div>
 				</div>
@@ -352,10 +352,10 @@
 				<div class="card-footer">
 					<div class="row portfolio-dual-buttons">
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://codepen.io/SamLegros/full/rwjaRq" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
+							<a href="https://codepen.io/samsverko/full/rwjaRq" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
 						</div>
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://github.com/SamLegros/local-weather" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+							<a href="https://github.com/samsverko/local-weather" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
 						</div>
 					</div>
 				</div>
@@ -376,10 +376,10 @@
 				<div class="card-footer">
 					<div class="row portfolio-dual-buttons">
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://codepen.io/SamLegros/full/prJeyW" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
+							<a href="https://codepen.io/samsverko/full/prJeyW" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
 						</div>
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://github.com/SamLegros/pomodoro-clock" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+							<a href="https://github.com/samsverko/pomodoro-clock" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
 						</div>
 					</div>
 				</div>
@@ -397,10 +397,10 @@
 				<div class="card-footer">
 					<div class="row portfolio-dual-buttons">
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://codepen.io/SamLegros/full/yRBdMO" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
+							<a href="https://codepen.io/samsverko/full/yRBdMO" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
 						</div>
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://github.com/SamLegros/build-a-product-landing-page" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+							<a href="https://github.com/samsverko/build-a-product-landing-page" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
 						</div>
 					</div>
 				</div>
@@ -422,10 +422,10 @@
 				<div class="card-footer">
 					<div class="row portfolio-dual-buttons">
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://codepen.io/SamLegros/full/KqNVvZ" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
+							<a href="https://codepen.io/samsverko/full/KqNVvZ" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
 						</div>
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://github.com/SamLegros/random-quote-machine" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+							<a href="https://github.com/samsverko/random-quote-machine" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
 						</div>
 					</div>
 				</div>
@@ -446,10 +446,10 @@
 				<div class="card-footer">
 					<div class="row portfolio-dual-buttons">
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://codepen.io/SamLegros/full/WEQWaj" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
+							<a href="https://codepen.io/samsverko/full/WEQWaj" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
 						</div>
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://github.com/SamLegros/sam-says" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+							<a href="https://github.com/samsverko/sam-says" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
 						</div>
 					</div>
 				</div>
@@ -467,10 +467,10 @@
 				<div class="card-footer">
 					<div class="row portfolio-dual-buttons">
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://codepen.io/SamLegros/full/yRLRyq" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
+							<a href="https://codepen.io/samsverko/full/yRLRyq" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
 						</div>
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://github.com/SamLegros/build-a-technical-documentation-page" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+							<a href="https://github.com/samsverko/build-a-technical-documentation-page" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
 						</div>
 					</div>
 				</div>
@@ -491,10 +491,10 @@
 				<div class="card-footer">
 					<div class="row portfolio-dual-buttons">
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://codepen.io/SamLegros/full/LjpVYE" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
+							<a href="https://codepen.io/samsverko/full/LjpVYE" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
 						</div>
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://github.com/SamLegros/tic-tac-toe" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+							<a href="https://github.com/samsverko/tic-tac-toe" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
 						</div>
 					</div>
 				</div>
@@ -516,10 +516,10 @@
 				<div class="card-footer">
 					<div class="row portfolio-dual-buttons">
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://codepen.io/SamLegros/full/owdYOL" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
+							<a href="https://codepen.io/samsverko/full/owdYOL" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
 						</div>
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://github.com/SamLegros/twitch-streamer-status" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+							<a href="https://github.com/samsverko/twitch-streamer-status" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
 						</div>
 					</div>
 				</div>
@@ -541,10 +541,10 @@
 				<div class="card-footer">
 					<div class="row portfolio-dual-buttons">
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://codepen.io/SamLegros/full/KqQwbe" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
+							<a href="https://codepen.io/samsverko/full/KqQwbe" target="_blank" rel="noopener"><button tabindex="-1" class="btn"><span class="button-text">SEE LIVE</span></button></a>
 						</div>
 						<div class="col-8 offset-2 col-sm-6 offset-sm-0">
-							<a href="https://github.com/SamLegros/wikipedia-viewer" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+							<a href="https://github.com/samsverko/wikipedia-viewer" target="_blank" rel="noopener"><button tabindex="-1" class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
 						</div>
 					</div>
 				</div>
@@ -556,8 +556,9 @@
 		<p tabindex="0" class="color-text-grey">There are several ways we can get in touch&nbsp;<span class="text-emoji align-middle">👋</span></p>
 
 		<div id="contact-icons-container">
-			<a tabindex="0" href="https://github.com/samlegros" target="_blank" rel="noopener" title="Link to Sam Legros' GitHub page"><i class="fab fa-github-square" title="github icon"></i></a>
-			<a tabindex="0" href="https://www.linkedin.com/in/samlegros/" target="_blank" rel="noopener" title="Link to Sam Legros' LinkedIn page"><i class="fab fa-linkedin" title="linkedin icon"></i></a>
+			<a tabindex="0" href="mailto:legros.sam@gmail.com?subject=Awesome%20Website!" target="_blank" rel="noopener" title="This link will open your email client to send an email to Sam Legros"><i class="fas fa-envelope-square" title="email icon"></i></a>
+			<a tabindex="0" href="https://github.com/SamSverko" target="_blank" rel="noopener" title="Link to Sam Sverko's GitHub page"><i class="fab fa-github-square" title="github icon"></i></a>
+			<a tabindex="0" href="https://www.linkedin.com/in/samsverko/" target="_blank" rel="noopener" title="Link to Sam Sverko's LinkedIn page"><i class="fab fa-linkedin" title="linkedin icon"></i></a>
 		</div>
 	</section>
 	<section id="section-settings">
@@ -572,13 +573,13 @@
 		</div>
 	</section>
 	<footer>
-		<p tabindex="0">Website made with <i class="fas fa-heart" title="love"></i> by Sam Legros in&nbsp;2019</p>
+		<p tabindex="0">Website made with <i class="fas fa-heart" title="love"></i> by Sam Sverko in&nbsp;2019</p>
 		<a href="https://www.w3.org/WAI/WCAG2AA-Conformance" target="_blank" rel="noopener" title="Explanation of WCAG 2.0 Level Double-A Conformance"><img height="32" width="88" src="https://www.w3.org/WAI/wcag2AA-blue" alt="Level Double-A conformance, W3C WAI Web Content Accessibility Guidelines 2.0"></a>
 		<!-- WCAG 2.0 Conformance Claim
 		Date: 2019-03-08
 		Guidelines title, version and URI: "Web Content Accessibility Guidelines 2.0 at http://www.w3.org/TR/2008/REC-WCAG20-20081211/
 		Conformance level: Level AA
-		Description of web page: The single web page of Sam Legros's web development portfolio. The page include sections relating to Sam's short biography, technology skills, project examples, and online links.
+		Description of web page: The single web page of Sam Sverko's web development portfolio. The page include sections relating to Sam's short biography, technology skills, project examples, and online links.
 		Web content technologies used: Bootstrap CSS 4.1.3, Bootstrap JS 4.13, Devicon CSS, HTML5, CSS3, Google Analytics JS, Google Font: Montserrat, JavaScript, jQuery 3.3.1 slim, Popper.js 1.14.3, smooth-scroll 14.2.1, typed.js 2.0.9, WCAG 2.0 Conformance -->
 	</footer>
 	<a tabindex="0" data-scroll href="#section-home" title="Navigate back to top of page"><button tabindex="-1" class="btn" id="back-to-top-button" title="Navigate back to top of page"><i class="fas fa-arrow-up" title="up arrow icon"></i></button></a>
